# microdata-job-service

./: .gitignore  .pylintrc  .test.env  Dockerfile  README.md  SECURITY.md  azure-pipelines.yml  backstage.yaml  pyproject.toml  test.db
.github/workflows/: codeql.yml  pr-test.yaml  test-and-build.yaml
doc/: openapi.yaml
job_service/: app.py
job_service/adapter/: auth.py  job_db.py  local_storage.py  maintenance_db.py  target_db.py
job_service/adapter/db/: __init__.py  migration.py  models.py  mongo.py  sqlite.py
job_service/adapter/local_storage/: input_directory.py
job_service/api/: auth.py  file_api.py  importable_datasets.py  importable_datasets_api.py  job_api.py  maintenance_api.py  maintenance_status.py  observability.py  observability_api.py  request_models.py  targets.py  targets_api.py
job_service/api/jobs/: __init__.py  models.py
job_service/config/: environment.py  gunicorn.py  logging.py  secrets.py
job_service/exceptions/: __init__.py  exceptions.py
job_service/model/: camelcase_model.py  enums.py  importable_dataset.py  job.py  request.py  target.py
job_service/repository/: job_db.py  local_storage.py
test/adapter/: test_job_db.py  test_local_storage.py  test_target_db.py
test/api/: test_file_api.py  test_importable_dataset_api.py  test_job_api.py  test_targets_api.py
test/model/: test_request.py
test/repository/: test_job_db.py  test_local_storage.py
test/resources/local/: docker-compose.yml
test/resources/model/: invalid_jobs.json  valid_job_requests.json
tests/: conftest.py  util.py
tests/integration/adapter/: test_local_storage.py
tests/resources/: migration_config.json  test_data.py
tests/resources/input_directory/: INVALID_DATASET.tar  MY_DATASET.tar  NO_DATASET.tar  OTHER_DATASET.tar  YOUR_DATASET.tar
tests/resources/local/: docker-compose.yml
tests/resources/model/: invalid_job_requests.json  valid_jobs.json
tests/resources/secrets/: secrets.json
tests/unit/adapter/: test_auth.py  test_job_db.py  test_local_storage.py  test_maintenance_db.py  test_target_db.py
tests/unit/api/: test_api.py  test_auth.py  test_delete_importable_dataset_api.py  test_importable_dataset_api.py  test_importable_datasets.py  test_job_api.py  test_jobs.py  (+4 more)
(+6 files in other folders)
