[tool.poetry]
name = "job-service"
version = "0.1.0"
description = ""
authors = ["Team Microdata"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
Flask-Pydantic = "^0.12.0"
pymongo = "^4.7.2"
pydantic = "^2.6.1"
PyJWT = "^2.4.0"
cryptography = "^43.0.1"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
requests = "2.31.0"  # pinning requests until https://github.com/docker/docker-py/issues/3256 resolved
pytest = "^8.0.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.7.0"
testcontainers = {extras = ["mongodb"], version = "^4.4.1"}
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
