[tool.poetry]
name = "job-service"
version = "0.1.0"
description = ""
authors = ["Microdata Developers <microdata-dev@ssb.no>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
Flask-Pydantic = "^0.12.0"
pymongo = "^4.11.0"
pydantic = "^2.10.0"
PyJWT = "^2.4.0"
cryptography = "^44.0.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.0"
pytest = "^8.0.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.7.0"
testcontainers = {extras = ["mongodb"], version = "^4.9.0"}
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py312"