[tool.poetry]
name = "job-service"
version = "0.1.0"
description = ""
authors = ["Microdata Developers <microdata-dev@ssb.no>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.0"
PyJWT = "^2.4.0"
cryptography = "^44.0.1"
gunicorn = "^23.0.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
requests = "^2.32.4"
pytest = "^8.0.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.7.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py313"
